# eSBAE

./: CHANGELOG.md  CONTRIBUTING.rst  LICENSE  README.rst  noxfile.py  pyproject.toml  requirements.txt  sepal_req.txt  setup.py
.github/workflows/: unit.yaml
docs/: conf.py  index.rst
eSBAE/: get_change_data.py
eSBAE/ee/: ccdc.py  global_products.py
eSBAE/sampling/: grid.py  helpers.py  sfc.py
e_sbae/: __init__.py  get_change_data.py
e_sbae/ee/: extract_time_series.py  landtrendr.py  time_series.py
e_sbae/ee/landsat/: landsat_collection.py  sun_angles.py
e_sbae/helpers/: python.py
e_sbae/sampling/: grid.py  helpers.py  sample_size.py  sfc.py
esbae/: __init__.py  get_change_data.py
esbae/ee/: extract_time_series.py  time_series.py
esbae/ee/landsat/: brdf_correction.py  sun_angles.py  view_angles.py
esbae/helpers/: ee.py
esbae/ts_analysis/: helpers.py
notebooks/: 01_sample_size_determination.ipynb  02_sample_design.ipynb  03a_extract_timeseries.ipynb  05_ensemble_classification.ipynb  06_kozak_neymann_stratification.ipynb  07_area_estimation.ipynb  Untitled.ipynb  country_stats.ipynb  sample_size.ipynb  tests.ipynb  time_series_testing.ipynb
tests/: __init__.py  test_tests.py
